fix language setting

--- a/Keysoc/zh-Hans.lproj/Main.strings
+++ b/Keysoc/zh-Hans.lproj/Main.strings
@@ -45,4 +45,4 @@
 "ydT-BC-Gv9.text" = "Label";
 
 /* Class = "UITabBarItem"; title = "Favorite"; ObjectID = "ynw-8F-h6Q"; */
-"ynw-8F-h6Q.title" = "收藏";
+"ynw-8F-h6Q.title" = "喜爱列表";
